# projeto_cowsay

./: .gitignore  README.md
data/: basic_text.txt  input.txt  long.txt  medium.txt
description/: README.md
docs/: author.md
source/: CMakeLists.txt
source/core/: cowsay.cpp  cowsay.h  main.cpp
